@@ -133,19 +133,13 @@ if test "$enable_binreloc" = "yes"; then
 fi
 
 
-# GTK checks
-gtk_modules="gtk+-2.0 >= 2.8.0"
+# GTK/GLib/GIO checks
+gtk_modules="gtk+-2.0 >= 2.12 glib-2.0 >= 2.16 gio-2.0 >= 2.16"
 PKG_CHECK_MODULES(GTK, [$gtk_modules])
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
-# GIO checks
-gio_modules="gio-2.0 >= 2.16"
-PKG_CHECK_MODULES(GIO, [$gio_modules], have_gio=1, have_gio=0)
-AC_SUBST(GIO_CFLAGS)
-AC_SUBST(GIO_LIBS)
-if test $have_gio = 1 ; then
-    AC_DEFINE(HAVE_GIO, 1, [Whether GIO is available])
-fi
+# currently define it, but we will be able to drop the checks now we hard-depend on it
+AC_DEFINE(HAVE_GIO, 1, [Whether GIO is available])
 # GTHREAD checks
 gthread_modules="gthread-2.0"
 PKG_CHECK_MODULES(GTHREAD, [$gthread_modules])
