@@ -39,18 +39,13 @@ INCLUDEDIRS=  -I.. \
 ALL_GTK_LIBS= \
 	-L"$(PREFIX)/lib" \
 	-lgtk-win32-2.0 -lgdk-win32-2.0 -latk-1.0 -lgdk_pixbuf-2.0 -lpangowin32-1.0 -lgdi32 \
-	-lpango-1.0 -lgobject-2.0 -lgmodule-2.0 -lgthread-2.0 -lglib-2.0 -lgthread-2.0 -lintl
+	-lpango-1.0 -lgobject-2.0 -lgmodule-2.0 -lgthread-2.0 -lglib-2.0 -lgthread-2.0 -lintl \
+	-lcairo -lpangocairo-1.0 -lgio-2.0
 	# these things are for GTK >= 2.8
 	# (should be same as with MSYS: pkg-config --libs gtk+-2.0 gthread-2.0)
 	#"$(PREFIX)/lib/libcairo.dll.a" \
 	#"$(PREFIX)/lib/asprintf.lib" \
 	#"$(PREFIX)/lib/charset.lib" \
-
-ifdef GTK280
-ALL_GTK_LIBS +=-liconv
-else
-ALL_GTK_LIBS +=-lcairo -lpangocairo-1.0 -lgio-2.0
-endif
 
 WIN_LIBS=-mwindows -lole32 -luuid -liberty -lwsock32
 
