@@ -1,3 +1,9 @@
+2011-06-13  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * configure.ac, src/Makefile.am, src/makefile.win32, wscript:
+   Dump dependencies to GTK >= 2.12, GLib >= 2.16 and GIO.
+
+
 2011-06-11  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/dialogs.c, src/main.c, src/ui_utils.h:
